added content in all the pages and made some design changes

--- a/artificial.html
+++ b/artificial.html
@@ -39,7 +39,7 @@
     <header>
         <nav class="navbar navbar-default navbar-fixed white no-background bootsnav">
             <!-- <div class="container"> -->
-                <div class="header">
+            <div class="header">
                 <div class="navbar-header">
                     <a class="navbar-brand" href="#">
                         <img src="images/IBM_ICE.jpg" alt="Logo" style="width: 200px !important;"
@@ -71,7 +71,7 @@
             </div>
         </nav>
 
-        <div class="navbar-fixed-top main-menu-continer" style="top: 200px !important;">
+        <div class="navbar-fixed-top main-menu-continer menutop">
             <button type="button" class="btn menubar-toggle styl" onclick="openNav()">
                 <!-- <i class="fa fa-bars"></i> -->Menu
             </button>
@@ -175,15 +175,16 @@
             <div class="row">
                 <div class="col-md-12">
                     <h2 class="heading bottom25">Artificial Intelligence<span class="divider-left"></span></h2>
-                    <p class="half_space text-justify">This course helps to gain knowledge on how
-                        artificial intelligence makes it possible for machines to learn from experience, adjust to new
-                        inputs and perform human-like tasks. The audience will learn about the technologies like machine
-                        learning, deep learning and natural language processing. It also provides an overview of how
-                        these technologies are used for training the systems to accomplish the specific tasks by
-                        processing large amounts of data and recognizing patterns in the data.
+                    <p class="half_space text-justify">John McCarthy, usually known as one of the godfathers of AI,
+                        defined it as “the science and engineering of making intelligent machines.” Information is a
+                        vital part of AI research. Machines and programs need to have abundant data associated to the
+                        world to act and react like human beings. AI will have access to groups, assets, things and
+                        relations between all of them to implement knowledge engineering. AI initiates joint sense,
+                        problem-solving and analytical reasoning power in machines. ML is a science of designing and
+                        applying algorithms that can learn things from past cases.
                     </p>
                 </div>
-            </div><br>
+            </div>
         </div>
     </section><br>
     <!--About-->
@@ -209,20 +210,24 @@
         </div>
     </section>
 
-    <section class="padding bottom25" style="padding-bottom: 0px;">
+    <section class="padding" style="padding-bottom: 0px;">
         <div class="container">
-                <h2 class="heading bottom25">Market Trends And Predictions<span class="divider-left"></span></h2>
+            <h2 class="heading bottom25">Market Trends And Projections<span class="divider-left"></span></h2>
             <div class="row">
-                <div class="col-md-5">
-                    <p class="half_space text-justify">The global market is forecasted to grow to 103 billion
-                        U.S. dollars by 2027, more than double its expected market size in 2018. With a share of 45
-                        percent, the software segment would become the large market segment by 2027.
-                    </p>
+                <div class="col-md-5 bottom15">
+                    <p class="half_space text-justify">There is a huge demand for Artificial Intelligence/Machine
+                        Learning professionals from private and public sectors. The global market is forecasted
+                        to grow to 103 billion U.S. dollars by 2027, more than double its expected market size
+                        in 2018. With a share of 45 percent, the software segment would become the large market
+                        segment by 2027.
+                    </p><br>
                     <h4 class="siz">Salary Trends</h4>
-                    <ul class="ulpad">
-                        <li>Globally average salary will be $130k per annum</li>
-                        <li>The median salary in India is INR 14.3 Lakhs across all skill sets</li>
-                    </ul>
+                    <p class="text-justify">The hike in this sector for the current year is projected to go upto INR
+                        50lpa<p>
+                            <ul class="ulpad">
+                                <li>Globally average salary will be $130k per annum</li>
+                                <li>The median salary in India is INR 14.3 Lakhs across all skill sets</li>
+                            </ul>
                 </div>
                 <div class="col-md-7">
                     <img class="img-responsive" src="images/AIML/market-graph.png" alt="graph">
@@ -231,44 +236,63 @@
         </div>
     </section>
 
+    <section id="ai">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <h3 class="heading bottom25">Skill Gap<span class="divider-left"></span></h3>
+                    <p class="text-justify">
+                        According to Sector Skills Council chief executive, The demand-supply gap for skills affected
+                        the industry's performance in 2018, due to shortage of 140,000 skilled techies for 500,000 jobs
+                        in the industry across verticals.
+                        "Going forward, the industry will face a shortage of 230,000 skilled techies as jobs in AI and
+                        Big Data are estimated to be 780,000 by 2021,"
+                    </p>
+                </div>
+            </div><br>
+            <div class="row">
+                <div class="col-md-12">
+                    <h3 class="heading bottom25">Why Artificial Intelligence/Machine Learning?<span
+                            class="divider-left"></span></h3>
+                    <p class="half_space text-justify">Artificial intelligence will shape our future more powerfully
+                        than any other innovation this century. It makes it possible for the machines to learn from
+                        their experience. There is a huge demand for Artificial intelligence/Machine learning
+                        professional from private and public sectors.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section><br>
+
     <section>
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                        <img class="img-responsive" src="images/AIML/skills.jpg" alt="skils">
-                    <!-- <div class="col-sm-4">
-                        <img class="img-responsive" src="images/AIML/jobs.jpg">
-                    </div>
-                    <div class="col-sm-6">
-                        <div class="item">
-                            <h4 class="siz">Job Roles</h4>
-                            <ul class="ulpad">
-                                <li>Machine learning engineer</li>
-                                <li>Data scientist</li>
-                                <li>Business intelligence developer </li>
-                            </ul>
-                        </div>
-                    </div> -->
+                    <img class="img-responsive" src="images/AIML/skills.jpg" alt="skils">
                 </div>
                 <div class="col-md-6">
-                        <div class="item">
-                                <h4 class="siz">Job Roles</h4>
-                                <ul class="ulpad">
-                                    <li>AI/ML Engineers</li>
-                                    <li>AI/ML Architect</li>
-                                    <li>AI/ML Developer </li>
-                                    <li>Researcher</li>
-                                </ul>
-                            </div><br>
-                            <div class="item">
-                                    <h4 class="siz">Skills Required</h4>
-                                    <ul class="ulpad">
-                                        <li>Programming</li>
-                                        <li>Probability and Statistics</li>
-                                        <li>Data Modelling & Evaluation</li>
-                                        <li>Machine Learning Algorithms</li>
-                                    </ul>
-                                </div>
+                    <div class="item">
+                        <h4 class="siz">Job Roles</h4>
+                        <ul class="ulpad">
+                            <li>AI/ML Engineers</li>
+                            <li>AI/ML Architect</li>
+                            <li>AI/ML Developer </li>
+                            <li>Researcher</li>
+                            <li>Product Engineer</li>
+                            <li>AI/ML Lead</li>
+                        </ul>
+                    </div><br>
+                    <div class="item">
+                        <h4 class="siz">Skills Required</h4>
+                        <ul class="ulpad">
+                            <li>Programming</li>
+                            <li>Probability and Statistics</li>
+                            <li>Data Modelling & Evaluation</li>
+                            <li>Machine Learning Algorithms</li>
+                            <li>Distributed Computing</li>
+                            <li>Advanced Signal Processing Techniques</li>
+                        </ul>
+                    </div>
                     <!-- <div class="col-sm-4">
                         <img class="img-responsive" src="images/AIML/skills.jpg">
                     </div>
@@ -289,22 +313,39 @@
 
     <section id="companies">
         <div class="container">
-                <h2 class="heading">Companies Hiring<span class="divider-left"></span></h2>
+            <h2 class="heading">Companies Hiring<span class="divider-left"></span></h2>
             <div class="row">
                 <div class="col-md-12">
-                <center><img class="img-responsive" src="images/AIML/companies.PNG" alt="company"></center>
+                    <center><img class="img-responsive" src="images/AIML/companies.PNG" alt="company"></center>
                 </div>
             </div>
         </div>
     </section><br>
+
+    <section id="corseovr">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <h2 class="heading bottom25">Course Overview<span class="divider-left"></span></h2>
+                    <p class="half_space text-justify">This course helps to gain knowledge on how
+                        artificial intelligence makes it possible for machines to learn from experience, adjust to new
+                        inputs and perform human-like tasks. The audience will learn about the technologies like machine
+                        learning, deep learning and natural language processing. It also provides an overview of how
+                        these technologies are used for training the systems to accomplish the specific tasks by
+                        processing large amounts of data and recognizing patterns in the data.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- Courses -->
     <section class="">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                     <h2 class="heading heading_space bottom25">Subjects<span class="divider-left"></span>
-                        </h2>
+                    <h2 class="heading heading_space bottom25">Subjects<span class="divider-left"></span>
+                    </h2>
                 </div>
             </div>
             <div class="row">
@@ -314,9 +355,10 @@
                             <div class="col-md-4 col-sm-6 col-xs-12"><img src="images/subjects/AIS1.png"
                                     class="img-responsive">
                                 <h4 class="bottom15"><strong>Introduction to AI/ML</strong></h4>
-                                <p class="bottom15 text-justify">This subject gives an overview on how
-                                    to create human interfaces applications which are simple to program, easily
-                                    understandable and maintainable.
+                                <p class="bottom15 text-justify">This subject gives an overview on how to create human
+                                    interfaces applications which are simple to program, easily understandable and
+                                    maintainable. The course provides an overview of AI concepts and workflows, machine
+                                    learning, deep learning, and performance metrics.
                                 </p>
                             </div>
                         </div>
@@ -326,8 +368,9 @@
                                     class="img-responsive">
                                 <h4 class="bottom15"><strong>Machine learning</strong></h4>
                                 <p class="bottom15 text-justify">This subject provides an understanding
-                                    of machine learning algorithms. Here the audience will learn to explore statistical
-                                    concepts such as probability, inference, and modelling and apply them in practice.
+                                    of machine learning algorithms. Here the audience will learn to explore
+                                    machine learning teachniques (supervised and unsupervised learning) and statistical
+                                    concepts (probability, inference, modelling) and apply them in practice.
                                 </p>
                             </div>
                         </div>
@@ -339,7 +382,8 @@
                                         learning</strong></h4>
                                 <p class="bottom15 text-justify">This subject provides an overview on
                                     using the machine learning technology to build an application for various industries
-                                    like healthcare, manufacturing, security, transport and others.
+                                    like Healthcare, Manufacturing, Security, Transportion, Agriculture, Retail, Oil and
+                                    Gas and others.
                                 </p>
                             </div>
                         </div>
@@ -355,10 +399,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                      <h2 class="heading heading_space bottom25">Skill Development Ecosystem<span
-                                class="divider-left"></span>
-                        </h2>
-                 </div>
+                    <h2 class="heading heading_space bottom25">Skill Development Ecosystem<span
+                            class="divider-left"></span>
+                    </h2>
+                </div>
             </div>
             <div class="row">
                 <div class="col-md-12">
