--- a/blockchain.html
+++ b/blockchain.html
@@ -39,7 +39,7 @@
     <header>
         <nav class="navbar navbar-default navbar-fixed white no-background bootsnav">
             <!-- <div class="container"> -->
-        <div class="header">
+            <div class="header">
                 <div class="navbar-header">
                     <a class="navbar-brand" href="#">
                         <img src="images/IBM_ICE.jpg" alt="Logo" style="width: 200px !important;"
@@ -134,8 +134,8 @@
                 <!-- SLIDE  -->
                 <li data-transition="fade">
                     <!-- MAIN IMAGE -->
-                    <img src="images/BC_banner.jpg" alt="" data-bgposition="center center"
-                        data-bgfit="cover" data-bgparallax="10" class="rev-slidebg">
+                    <img src="images/BC_banner.jpg" alt="" data-bgposition="center center" data-bgfit="cover"
+                        data-bgparallax="10" class="rev-slidebg">
                     <!-- LAYER NR. 1 -->
                     <div class="tp-caption tp-resizeme" data-x="['center','center','center','center']"
                         data-hoffset="['0','0','0','0']" data-y="['326','270','270','150']"
@@ -175,16 +175,19 @@
             <div class="row">
                 <div class="col-md-12">
                     <h2 class="heading bottom25">Blockchain<span class="divider-left"></span></h2>
-                    <p class="half_space text-justify">This course provides an overview on the blockchain, the
-                        technologies involved in blockchain, the components of blockchain and its advantages. It helps
-                        to gain knowledge on building the blockchain application using Hyperledger which includes
-                        composer framework model, composer API’s etc. It also helps to develop application in several
-                        industries such as banking, finance, healthcare is also presented here.
+                    <p class="half_space text-justify">Blockchain is an evolving technology that can drastically
+                        progress banking, supply chain, and other transaction networks and can generate new openings for
+                        modernization. Businesses comprise many instances of networks of individuals and organizations
+                        that team up to create value and wealth. These networks work together in markets that exchange
+                        assets in the form of goods and services between the participants. Blockchain technology offers
+                        the foundation for an active shared ledger that can be useful to save time when recording
+                        transactions between parties, remove costs associated with intermediaries, and reduce risks of
+                        fraud and tampering.
                     </p>
                 </div>
             </div><br>
         </div>
-    </section><br>
+    </section>
     <!--About-->
 
     <!-- Video -->
@@ -210,101 +213,146 @@
 
     <section class="padding bottom25" style="padding-bottom: 0px;">
         <div class="container">
-                <h2 class="heading bottom25">Market Trends And Predictions<span class="divider-left"></span></h2>
+            <h2 class="heading bottom25">Market Trends And Predictions<span class="divider-left"></span></h2>
             <div class="row">
                 <div class="col-md-5">
-                    <p class="half_space text-justify">The global blockchain technology market size is expected to reach
-                        USD 7.59 billion by 2024, according to a new report by Grand View Research.
-                    </p>
+                    <p class="half_space text-justify padding">The global blockchain market size is expected to grow
+                        from USD
+                        1.2 billion in 2018 to USD 23.3 billion by 2023, at a Compound Annual Growth Rate (CAGR) of
+                        80.2% during the forecast period.
+                    </p><br>
                     <h4 class="siz">Salary Trends</h4>
-                    <ul class="ulpad">
-                            <li>Globally average salary is $80k per annum</li>
-                        <li>Average salary in India is ₹80lpa across all skill sets
-                        </li>
-                    </ul>
+                    <p class="text-justify">The hike in this sector for the current year is projected at around 8-10%<p>
+                            <ul class="ulpad">
+                                <li>Globally average salary is $80k per annum</li>
+                                <li>Average salary in India is ₹80lpa across all skill sets
+                                </li>
+                            </ul>
                 </div>
-                <div class="col-md-7">
+                <div class="col-md-6">
                     <img class="img-responsive" src="images/blockchain/market-graph.jpg" alt="graph">
                 </div>
             </div>
         </div>
     </section>
 
+    <section id="ai">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <h3 class="heading bottom25">Skill Gap<span class="divider-left"></span></h3>
+                    <p class="text-justify">
+                        IBM and Mastercard have already filed more than 80 patents each for blockchain-related
+                        technology, and companies are struggling to find sufficient talent to develop their initiatives.
+                        Since January 2017, the demand for blockchain engineering talent has grown 700 percent, and 40
+                        percent of the fully managed software development projects requested in the last month require
+                        blockchain skills. ComputerWorld highlighted the extent of this demand in May earlier this year
+                        citing a Q1 2018 Upwork report that detailed how blockchain developer freelancing grew at a
+                        year-over-year rate of 6,000 percent. Further, a study by SAP in March determined that 92
+                        percent of
+                        business leaders surveyed viewed blockchain as an opportunity, with Supply Chain & IoT one of
+                        the leading practical applications.
+                    </p>
+                </div>
+            </div><br>
+            <div class="row">
+                <div class="col-md-12">
+                    <h3 class="heading bottom25">Why Blockchain?<span class="divider-left"></span></h3>
+                    <p class="half_space text-justify">Blockchain technology is growing rapidly and its impact is very
+                        high on the industries. There is a huge demand for blockchain professional from private and
+                        public sectors.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section><br>
+
     <section>
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
                     <img class="img-responsive" alt="skill" src="images/AIML/skills.jpg">
-                    <!-- <div class="col-sm-4">
-                        <img class="img-responsive" src="images/AIML/jobs.jpg">
-                    </div>
-                    <div class="col-sm-6">
-                        <div class="item">
-                            <h4 class="siz">Job Roles</h4>
-                            <ul class="ulpad">
-                                <li>Backend developer</li>
-                                <li>Blockchain system architect</li>
-                                <li>Blockchain software engineer</li>
-                                <li>Blockchain web designer</li>
-                                <li>Blockchain quality engineer</li>
-                            </ul>
-                        </div>
-                    </div> -->
                 </div>
-                <div class="col-md-6">
-                        <div class="item">
-                                <h4 class="siz">Job Roles</h4>
-                                <ul class="ulpad">
-                                    <li>Backend developer</li>
-                                    <li>Blockchain system architect</li>
-                                    <li>Blockchain software engineer</li>
-                                    <li>Blockchain web designer</li>
-                                    <li>Blockchain quality engineer</li>
-                                </ul>
-                            </div>
-                            <div class="item">
-                                    <h4 class="siz">Skills Required</h4>
-                                    <ul class="ulpad">
-                                        <li>Cryptography</li>
-                                        <li>Programming</li>
-                                        <li>Distributed ledger – concepts</li>
-                                    </ul>
-                                </div>
-                    <!-- <div class="col-sm-4">
-                        <img class="img-responsive" src="images/AIML/skills.jpg">
+                <div class="col-md-6" style="padding-left: 31px;">
+                    <div class="item bottom25">
+                        <h4 class="siz">Job Roles</h4>
+                        <ul class="ulpad">
+                            <li>Backend Developer</li>
+                            <li>Blockchain System Architect</li>
+                            <li>Blockchain Software Engineer</li>
+                            <li>Blockchain Web Designer</li>
+                            <li>Blockchain Quality Engineer</li>
+                            <li>Blockchain Legal Consultant</li>
+                            <li>Blockchain Solution Architect</li>
+                        </ul>
                     </div>
-                    <div class="col-sm-6">
-                        <div class="item">
-                            <h4 class="siz">Skills Required</h4>
-                            <ul class="ulpad">
-                                <li>Cryptography</li>
-                                <li>Programming</li>
-                                <li>Distributed ledger – concepts</li>
-                            </ul>
-                        </div>
-                    </div> -->
+                    <div class="item">
+                        <h4 class="siz">Skills Required</h4>
+                        <ul class="ulpad">
+                            <li>Cryptography</li>
+                            <li>Programming</li>
+                            <li>Distributed Ledger – concepts</li>
+                            <li>Data Analysis</li>
+                            <li>Cryptocurrency</li>
+                            <li>Networking</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
     </section><br>
 
     <section id="companies">
-        <div class="container">  <h2 class="heading">Companies Hiring<span class="divider-left"></span></h2>
+        <div class="container">
+            <h2 class="heading">Companies Hiring<span class="divider-left"></span></h2>
             <div class="row">
                 <div class="col-md-12">
-                <center><img class="img-responsive" src="images/blockchain/companies.PNG" alt="company"></center>
-            </div>
+                    <center><img class="img-responsive" src="images/blockchain/companies.PNG" alt="company"></center>
+                </div>
             </div>
         </div>
     </section><br>
+
+    <section id="ai">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <h2 class="heading bottom25">Blockchain<span class="divider-left"></span></h2>
+                    <p class="half_space text-justify">This course provides an overview on the blockchain, the
+                        technologies involved in blockchain, the components of blockchain and its advantages. It helps
+                        to gain knowledge on building the blockchain application using Hyperledger which includes
+                        composer framework model, composer API’s etc. It also helps to develop application in several
+                        industries such as banking, finance, healthcare is also presented here.
+                    </p>
+                </div>
+            </div><br>
+        </div>
+    </section>
+
+    <!--course overview-->
+    <section id="ai">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <h2 class="heading bottom25">Course Overview<span class="divider-left"></span></h2>
+                    <p class="half_space text-justify">This course provides an overview on the blockchain, the
+                        technologies involved in blockchain, the components of blockchain and its advantages. It helps
+                        to gain knowledge on building the blockchain application using hyperledger which includes
+                        composer framework model, composer API’s etc. It also helps to develop application in several
+                        industries such as banking, finance, healthcare is also presented here.
+                    </p>
+                </div>
+            </div><br>
+        </div>
+    </section>
 
     <!-- Courses -->
     <section class="">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                  <h2 class="heading heading_space bottom25">Subjects<span class="divider-left"></span>
-                        </h2>
+                    <h2 class="heading heading_space bottom25">Subjects<span class="divider-left"></span>
+                    </h2>
                 </div>
             </div>
             <div class="row">
@@ -313,9 +361,11 @@
                         <div class="item active">
                             <div class="col-md-4 col-sm-6 col-xs-12"><img src="images/blockchain/BCS1.png"
                                     class="img-responsive">
-                                <h4 class="bottom15"><strong>Introduction To Blockchain</strong></h4>
+                                <h4 class="bottom15"><strong>Introduction to blockchain</strong></h4>
                                 <p class="bottom15 text-justify">This subject provides an overview of blockchain, the
-                                    concept of blockchain technology and its benefits to business.
+                                    concept of blockchain technology and its benefits to business. It provides an
+                                    overview of blockchain origin, objectives, and
+                                    challenges, slowly progressing to bitcoin data structures. 
                                 </p>
                             </div>
                         </div>
@@ -323,7 +373,7 @@
                         <div class="item">
                             <div class="col-md-4 col-sm-6 col-xs-12"><img src="images/blockchain/BCS2.jpg"
                                     class="img-responsive">
-                                <h4 class="bottom15"><strong>Blockchain Applications Using Hyperledger</strong></h4>
+                                <h4 class="bottom15"><strong>Blockchain applications using hyperledger</strong></h4>
                                 <p class="bottom15 text-justify">This subject provides an overview on how to develop
                                     hyper-ledger blockchain applications using composer framework model, develop front
                                     end (client) applications using composer API.
@@ -334,11 +384,11 @@
                         <div class="item">
                             <div class="col-md-4 col-sm-6 col-xs-12"><img src="images/blockchain/BCS3.jpg"
                                     class="img-responsive">
-                                <h4 class="bottom15"><strong>Industry Application Development Using Blockchain</strong>
+                                <h4 class="bottom15"><strong>Industry application development using blockchain</strong>
                                 </h4>
                                 <p class="bottom15 text-justify">This subject introduce the blockchain with industry
-                                    applications such as education, finance, government, healthcare, IoT, insurance,
-                                    real estate, retail, supply chain and others.
+                                    applications such as Education, Finance, Healthcare, IoT, Insurance,
+                                    Retail, Government, Supply chain and others.
                                 </p>
                             </div>
                         </div>
