--- a/cybersecu.html
+++ b/cybersecu.html
@@ -38,8 +38,8 @@
     <!--Header-->
     <header>
         <nav class="navbar navbar-default navbar-fixed white no-background bootsnav">
-             <!-- <div class="container"> -->
-        <div class="header">
+            <!-- <div class="container"> -->
+            <div class="header">
                 <div class="navbar-header">
                     <a class="navbar-brand" href="#">
                         <img src="images/IBM_ICE.jpg" alt="Logo" style="width: 200px !important;"
@@ -134,7 +134,7 @@
                 <!-- SLIDE  -->
                 <li data-transition="fade">
                     <!-- MAIN IMAGE -->
-                    <img src="images/CS/banner.jpg" alt="" data-bgposition="center center" data-bgfit="cover"
+                    <img src="images/CS/CS-sub_banner.jpg" alt="" data-bgposition="center center" data-bgfit="cover"
                         data-bgparallax="10" class="rev-slidebg">
                     <!-- LAYER NR. 1 -->
                     <div class="tp-caption tp-resizeme" data-x="['center','center','center','center']"
@@ -176,12 +176,13 @@
                 <div class="col-md-12">
                     <h2 class="heading bottom25">Cyber Security<span class="divider-left"></span></h2>
                     <p class="half_space text-justify">
-                        This course introduces the basic cyber security concepts, enables the student to identify root
-                        causes of vulnerabilities in a network system and distinguish them from the threats from both
-                        inside and outside. The student is introduced to the risk management framework for analyzing the
-                        risks in a network system and apply the basic security design principles to protect the data and
-                        secure the computer systems. It also provides case studies which will help the student to get
-                        clear picture on cyber security.
+                        Cyber security is the technology, process, and practice designed to protect networks, devices,
+                        programs, and data from attack, damage, or unauthorized access. Cyber security is also referred
+                        as information technology security. Cyber security defends the system and servers, mobile
+                        devices, network and data from malevolent attacks. The term is wide-ranging and covers
+                        everything from computer security to disaster recovery and end-user education. Cyber-security is
+                        a budding discipline which focusses on giving the unsurpassed protection for electronic systems
+                        in the event of threats.
                     </p>
                 </div>
             </div><br>
@@ -212,81 +213,82 @@
 
     <section class="padding bottom25" style="padding-bottom: 0px;">
         <div class="container">
-               <h2 class="heading bottom25">Market Trends And Predictions<span class="divider-left"></span></h2>
-           <div class="row">
+            <h2 class="heading bottom25">Market Trends And Projections<span class="divider-left"></span></h2>
+            <div class="row">
                 <div class="col-md-5">
-                    <p class="half_space text-justify">Cyber Security Market is Estimated to Grow at a CAGR of 13.5% over the forecast years (2019 - 2027), with Cyber-attacks Gaining Traction as Fastest Growing Type of Crime Across the Globe, Says Absolute Markets Insights.
-                    </p>
+                    <p class="half_space text-justify">Cyber Security Market is Estimated to Grow at a CAGR of 13.5%
+                        over the forecast years (2019 - 2027), with Cyber-attacks Gaining Traction as Fastest Growing
+                        Type of Crime Across the Globe, Says Absolute Markets Insights.
+                    </p><br>
                     <h4 class="siz">Salary Trends</h4>
-                    <ul class="ulpad">                        
-                            <li>Globally avarage salary is $144k per annum</li>
-                        <li>Average salary in India is ₹80lpa across all skill sets</li>
-                    </ul>
+                    <p class="text-justify">The hike in this sector for the current year is projected at around 6% <p>
+                            <ul class="ulpad">
+                                <li>Globally avarage salary is $144k per annum</li>
+                                <li>Average salary in India is ₹80lpa across all skill sets</li>
+                            </ul>
                 </div>
-                <div class="col-md-7">
+                <div class="col-md-6">
                     <img class="img-responsive" src="images/CS/market-graph.jpg" alt="graph">
                 </div>
             </div>
         </div>
     </section>
 
+    <section id="ai">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <h3 class="heading bottom25">Skill Gap<span class="divider-left"></span></h3>
+                    <p class="text-justify">
+                        As per World Economic Forum January 2019 report, in United States there are more than 200,000
+                        cybersecurity skills requiring job vacancies.
+                        The skill gap has now become an ever-growing mountain for its climbers, the recruiters of the
+                        cybersecurity roles. Even the statistics indicate that by 2021, there will be 3.5 million
+                        unfilled cybersecurity jobs
+                    </p>
+                </div>
+            </div><br>
+            <div class="row">
+                <div class="col-md-12">
+                    <h3 class="heading bottom25">Why Cyber Security?<span class="divider-left"></span></h3>
+                    <p class="half_space text-justify">Raising cybersecurity awareness is one of the main strategies of
+                        data protection and reduces the risks of cyber-attacks. Many organizations are developing
+                        programs to train to battle with cyber threats.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section><br>
+
     <section>
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
                     <img class="img-responsive" alt="skill" src="images/AIML/skills.jpg">
-                    <!-- <div class="col-sm-4">
-                        <img class="img-responsive" src="images/AIML/jobs.jpg">
-                    </div>
-                    <div class="col-sm-6">
-                        <div class="item">
-                            <h4 class="siz">Job Roles</h4>
-                            <ul class="ulpad">
-                                <li>Information security analyst </li>
-                                <li>Security software developer</li>
-                                <li>Network security architect</li>
-                                <li>Network and computer systems administrator</li>
-                                <li>Computer and information systems manager</li>
-                            </ul>
-                        </div>
-                    </div> -->
                 </div>
                 <div class="col-md-6">
-                        <div class="item">
-                                <h4 class="siz">Job Roles</h4>
-                                <ul class="ulpad">
-                                    <li>Information security analyst </li>
-                                    <li>Security software developer</li>
-                                    <li>Network security architect</li>
-                                    <li>Network and computer systems administrator</li>
-                                    <li>Computer and information systems manager</li>
-                                </ul>
-                            </div><br>
-                            <div class="item">
-                                    <h4 class="siz">Skills Required</h4>
-                                    <ul class="ulpad">
-                                        <li>Programming</li>
-                                        <li>Risk analysis and mitigation</li>
-                                        <li>Cloud security </li>
-                                        <li>Security analysis </li>
-                                        <li>Networking </li>
-                                    </ul>
-                                </div>
-                    <!-- <div class="col-sm-4">
-                        <img class="img-responsive" src="images/AIML/skills.jpg">
+                    <div class="item">
+                        <h4 class="siz">Job Roles</h4>
+                        <ul class="ulpad">
+                            <li>Information Security Analyst </li>
+                            <li>Security Software Developer</li>
+                            <li>Network Security Architect</li>
+                            <li>Network and Computer Systems Administrator</li>
+                            <li>Computer and information Systems Manager</li>
+                            <li>Security Consultant</li>
+                        </ul>
+                    </div><br>
+                    <div class="item">
+                        <h4 class="siz">Skills Required</h4>
+                        <ul class="ulpad">
+                            <li>Programming</li>
+                            <li>Risk Analysis and Mitigation</li>
+                            <li>Cloud Security </li>
+                            <li>Security Analysis </li>
+                            <li>Networking </li>
+                            <li>Intrusion Detection</li>
+                        </ul>
                     </div>
-                    <div class="col-sm-6">
-                        <div class="item">
-                            <h4 class="siz">Skills Required</h4>
-                            <ul class="ulpad">
-                                <li>Programming</li>
-                                <li>Risk analysis and mitigation</li>
-                                <li>Cloud security </li>
-                                <li>Security analysis </li>
-                                <li>Networking </li>
-                            </ul>
-                        </div>
-                    </div> -->
                 </div>
             </div>
         </div>
@@ -294,22 +296,40 @@
 
     <section id="companies">
         <div class="container">
-               <h2 class="heading">Companies Hiring<span class="divider-left"></span></h2>
+            <h2 class="heading">Companies Hiring<span class="divider-left"></span></h2>
             <div class="row">
                 <div class="col-md-12">
-                <center><img class="img-responsive" src="images/CS/companies.PNG" alt="company"></center>
-            </div>
+                    <center><img class="img-responsive" src="images/CS/companies.PNG" alt="company"></center>
+                </div>
             </div>
         </div>
     </section><br>
+
+    <section id="ai">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <h2 class="heading bottom25">Course Overview<span class="divider-left"></span></h2>
+                    <p class="half_space text-justify">
+                        This course introduces the basic cyber security concepts, enables the student to identify root
+                        causes of vulnerabilities in a network system and distinguish them from the threats from both
+                        inside and outside. The student is introduced to the risk management framework for analyzing the
+                        risks in a network system and apply the basic security design principles to protect the data and
+                        secure the computer systems. It also provides case studies which will help the student to get
+                        clear picture on cyber security.
+                    </p>
+                </div>
+            </div><br>
+        </div>
+    </section>
 
     <!-- Courses -->
     <section class="">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                      <h2 class="heading heading_space bottom25">Subjects<span class="divider-left"></span>
-                        </h2>
+                    <h2 class="heading heading_space bottom25">Subjects<span class="divider-left"></span>
+                    </h2>
                 </div>
             </div>
             <div class="row">
@@ -318,10 +338,10 @@
                         <div class="item active">
                             <div class="col-md-4 col-sm-6 col-xs-12"><img src="images/CS/cyber_security1.jpg"
                                     class="img-responsive">
-                                <h4 class="bottom15"><strong>Information Security Fundamentals</strong></h4>
+                                <h4 class="bottom15"><strong>Information security fundamentals</strong></h4>
                                 <p class="bottom15 text-justify">This subject provides an insight into the concept of
                                     the effective information protection services. The audience will learn how to
-                                    protect organization’s valuable resources, such as information and assets.
+                                    protect organization’s valuable resources.
                                 </p>
                             </div>
                         </div>
@@ -329,7 +349,7 @@
                         <div class="item">
                             <div class="col-md-4 col-sm-6 col-xs-12"><img src="images/CS/cyber_security2.jpg"
                                     class="img-responsive">
-                                <h4 class="bottom15"><strong>IT Applications And Data Security</strong></h4>
+                                <h4 class="bottom15"><strong>IT applications and data security</strong></h4>
                                 <p class="bottom15 text-justify">This subject will help you to learn IT application
                                     security. Introduction to software development, application security, input
                                     validation and sensitive data handling are presented here.
@@ -340,10 +360,11 @@
                         <div class="item">
                             <div class="col-md-4 col-sm-6 col-xs-12"><img src="images/CS/cyber_security3.jpg"
                                     class="img-responsive">
-                                <h4 class="bottom15"><strong>Ethical Hacking And Penetration Testing</strong></h4>
+                                <h4 class="bottom15"><strong>Ethical hacking and penetration testing</strong></h4>
                                 <p class="bottom15 text-justify">This subject gives an overview on how to use the
-                                    ethical hacking techniques and how to conduct a professional penetration test
-                                    workflow using the swiss army knife operating system kali linux.
+                                    ethical hacking techniques, penetration test
+                                    workflow, pen-testing techniques with high energy lectures and
+                                    hands-on lab exercises.
                                 </p>
                             </div>
                         </div>
@@ -359,10 +380,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                       <h2 class="heading heading_space bottom25">Skill Development Ecosystem<span
-                                class="divider-left"></span>
-                        </h2>
-                 </div>
+                    <h2 class="heading heading_space bottom25">Skill Development Ecosystem<span
+                            class="divider-left"></span>
+                    </h2>
+                </div>
             </div>
             <div class="row">
                 <div class="col-md-12">
