--- a/datascience.html
+++ b/datascience.html
@@ -38,8 +38,8 @@
     <!--Header-->
     <header>
         <nav class="navbar navbar-default navbar-fixed white no-background bootsnav">
-             <!-- <div class="container"> -->
-        <div class="header">
+            <!-- <div class="container"> -->
+            <div class="header">
                 <div class="navbar-header">
                     <a class="navbar-brand" href="#">
                         <img src="images/IBM_ICE.jpg" alt="Logo" style="width: 200px !important;"
@@ -134,8 +134,8 @@
                 <!-- SLIDE  -->
                 <li data-transition="fade">
                     <!-- MAIN IMAGE -->
-                    <img src="images/BC_banner.jpg" alt="banner" data-bgposition="center center" data-bgfit="cover"
-                        data-bgparallax="10" class="rev-slidebg">
+                    <img src="images/datascience/DS-Sub_banner.jpg" alt="banner" data-bgposition="center center"
+                        data-bgfit="cover" data-bgparallax="10" class="rev-slidebg">
                     <!-- LAYER NR. 1 -->
                     <div class="tp-caption tp-resizeme" data-x="['center','center','center','center']"
                         data-hoffset="['0','0','0','0']" data-y="['326','270','270','150']"
@@ -173,14 +173,16 @@
     <section id="ai">
         <div class="container">
             <div class="row">
-                <div class="col-md-12" >
+                <div class="col-md-12">
                     <h2 class="heading bottom25">Data Science<span class="divider-left"></span></h2>
                     <p class="half_space text-justify">
-                        Data Science (DS) is a new, exponentially-growing field, consisting of a set of tools and
-                        techniques used to extract valuable information from data. Data Science is an interdisciplinary,
-                        problem-solving oriented subject that teaches to apply scientific techniques to practical
-                        problems. The course focuses on practical classes and SME guided self-study during preparation
-                        of datasets, visualizing the data and programming of data analysis tasks.
+                        Data science is an extensive field that refers to the collection, concepts, tools and technology
+                        that enables the evaluation, investigation and extraction of valuable information from raw data.
+                        It is enabling people and establishments to make healthier decisions from warehoused, expended
+                        and managed data. Data science makes use of hypothetical, accurate, computational and various
+                        other means to evaluate data. The main purpose is to extract the precise information that can be
+                        utilized for multiple reasons, including decision making, development of products, understand
+                        the trend and predicting.
                     </p>
                 </div>
             </div><br>
@@ -211,75 +213,86 @@
 
     <section class="padding bottom25" style="padding-bottom: 0px;">
         <div class="container">
-              <h2 class="heading bottom25">Market Trends And Predictions<span class="divider-left"></span></h2>
+            <h2 class="heading bottom25">Market Trends And Projections<span class="divider-left"></span></h2>
             <div class="row">
                 <div class="col-md-5">
                     <p class="half_space text-justify">The global market is projected to grow from $17.1B
                         in 2017 to $99.31B in 2022 attaining a 28.5% CAGR. The greatest period of projected growth is in
                         2021 and 2022 when the market is projected to jump $30B in value in one year.
-                    </p>
+                    </p><br>
                     <h4 class="siz">Salary Trends</h4>
-                    <ul class="ulpad">
-                            <li>Globally average salary will be $117k per annum</li>
-                        <li>Average salary in India is INR 68lpa across all skill sets</li>
-                    </ul>
+                    <p class="text-justify">The hike in this sector for the current year is projected at around 65% <p>
+                            <ul class="ulpad">
+                                <li>Globally average salary will be $117k per annum</li>
+                                <li>Average salary in India is INR 68lpa across all skill sets</li>
+                            </ul>
                 </div>
-                <div class="col-md-7">
+                <div class="col-md-6">
                     <img class="img-responsive" src="images/datascience/market-graph.jpg" alt="graph">
                 </div>
             </div>
         </div>
     </section>
 
+    <section id="ai">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <h3 class="heading bottom25">Skill Gap<span class="divider-left"></span></h3>
+                    <p class="text-justify">
+                        As per the LinkedIn Workforce Report for US (August 2018), demand for data scientists is off the
+                        charts, data science skills shortages are present in almost every large U.S. city. Nationally,
+                        we have a shortage of 151,717 people with data science
+                        skills. Job growth in the next decade is expected to outstrip growth during the previous decade,
+                        creating 11.5M jobs in the Data Science/Analytics area by 2026, according to the U.S. Bureau of
+                        Labor Statistics.
+                        IBM recently claimed that by 2020 the number of Data Science and Analytics job listings is
+                        projected to grow by nearly 364,000 listings to approximately 2,720,000. No matter what the true
+                        number of data professionals out there currently, their number is likely to grow in the near
+                        future.
+                    </p>
+                </div>
+            </div><br>
+            <div class="row">
+                <div class="col-md-12">
+                    <h3 class="heading bottom25">Why Data Science?<span class="divider-left"></span></h3>
+                    <p class="half_space text-justify">Data Science hold the key to the future. There is a huge demand
+                        for data science professional from private and public sectors.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section><br>
+
     <section>
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
                     <img class="img-responsive" alt="skill" src="images/AIML/skills.jpg">
-                    <!-- <div class="col-sm-4">
-                        <img class="img-responsive" src="images/AIML/jobs.jpg">
-                    </div>
-                    <div class="col-sm-6">
-                        <div class="item">
-                            <h4 class="siz">Job Roles</h4>
-                            <ul class="ulpad">
-                                <li>Data analyst </li>
-                                <li>Data scientist</li>
-                                <li>Product analyst</li>
-                            </ul>
-                        </div>
-                    </div> -->
                 </div>
                 <div class="col-md-6">
-                        <div class="item">
-                                <h4 class="siz">Job Roles</h4>
-                                <ul class="ulpad">
-                                    <li>Data analyst </li>
-                                    <li>Data scientist</li>
-                                    <li>Product analyst</li>
-                                </ul>
-                            </div><br>
-                            <div class="item">
-                                    <h4 class="siz">Skills Required</h4>
-                                    <ul class="ulpad">
-                                        <li>Programming</li>
-                                        <li>Analytics</li>
-                                        <li>Data visualization </li>
-                                    </ul>
-                                </div>
-                    <!-- <div class="col-sm-4">
-                        <img class="img-responsive" src="images/AIML/skills.jpg">
+                    <div class="item">
+                        <h4 class="siz">Job Roles</h4>
+                        <ul class="ulpad">
+                            <li>Data Analyst </li>
+                            <li>Data Scientist</li>
+                            <li>Product Analyst</li>
+                            <li>Statistician</li>
+                            <li>Data Engineer/Data Architect</li>
+                            <li>Data and Analytics Manager</li>
+                        </ul>
+                    </div><br>
+                    <div class="item">
+                        <h4 class="siz">Skills Required</h4>
+                        <ul class="ulpad">
+                            <li>Programming</li>
+                            <li>Analytics</li>
+                            <li>Data Visualization </li>
+                            <li>Statistics</li>
+                            <li>Data Intuition</li>
+                            <li>Data Communication</li>
+                        </ul>
                     </div>
-                    <div class="col-sm-6">
-                        <div class="item">
-                            <h4 class="siz">Skills Required</h4>
-                            <ul class="ulpad">
-                                <li>Programming</li>
-                                <li>Analytics</li>
-                                <li>Data visualization </li>
-                            </ul>
-                        </div>
-                    </div> -->
                 </div>
             </div>
         </div>
@@ -287,12 +300,29 @@
 
     <section id="companies">
         <div class="container">
-              <h2 class="heading">Companies Hiring<span class="divider-left"></span></h2>
+            <h2 class="heading">Companies Hiring<span class="divider-left"></span></h2>
             <div class="row">
                 <div class="col-md-12">
-                <center><img class="img-responsive" src="images/datascience/companies.PNG" alt="company"></center>
+                    <center><img class="img-responsive" src="images/datascience/companies.PNG" alt="company"></center>
+                </div>
             </div>
-            </div>
+        </div>
+    </section><br>
+
+    <section id="ai">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <h2 class="heading bottom25">Course Overview<span class="divider-left"></span></h2>
+                    <p class="half_space text-justify">
+                        Data Science (DS) is a new, exponentially-growing field, consisting of a set of tools and
+                        techniques used to extract valuable information from data. Data Science is an interdisciplinary,
+                        problem-solving oriented subject that teaches to apply scientific techniques to practical
+                        problems. The course focuses on practical classes and SME guided self-study during preparation
+                        of datasets, visualizing the data and programming of data analysis tasks.
+                    </p>
+                </div>
+            </div><br>
         </div>
     </section><br>
 
@@ -302,7 +332,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <h2 class="heading heading_space bottom25">Subjects<span class="divider-left"></span>
-                        </h2>
+                    </h2>
                 </div>
             </div>
             <div class="row">
@@ -311,10 +341,11 @@
                         <div class="item active">
                             <div class="col-md-4 col-sm-6 col-xs-12"><img src="images/datascience/DSS1.jpg"
                                     class="img-responsive">
-                                <h4 class="bottom15"><strong>Introduction To Data Science</strong></h4>
-                                <p class="bottom15 text-justify">This subject will give you a complete picture of data.
-                                    Here the audience will learn about analytics of data, the usage of tools like R
-                                    studio, advance excel, tableau etc.
+                                <h4 class="bottom15"><strong>Introduction to data science</strong></h4>
+                                <p class="bottom15 text-justify">This subject gives an overview on basic concepts of
+                                    data science, techniques and tools , data collection and integration, exploratory
+                                    data analysis, predictive modeling, descriptive modeling, data product creation,
+                                    evaluation, and effective communication.
                                 </p>
                             </div>
                         </div>
@@ -322,7 +353,7 @@
                         <div class="item">
                             <div class="col-md-4 col-sm-6 col-xs-12"><img src="images/datascience/DSS2.jpg"
                                     class="img-responsive">
-                                <h4 class="bottom15"><strong>Data Mining And Predictive Analytics</strong></h4>
+                                <h4 class="bottom15"><strong>Data mining and predictive analytics</strong></h4>
                                 <p class="bottom15 text-justify">This subject provides an overview on hidden patterns of
                                     data through machine learning and sophisticated algorithms. This also make us to
                                     understand how to extract hidden value from newly discovered patterns using business
@@ -334,7 +365,7 @@
                         <div class="item">
                             <div class="col-md-4 col-sm-6 col-xs-12"><img src="images/datascience/DSS3.jpg"
                                     class="img-responsive">
-                                <h4 class="bottom15"><strong>Descriptive Analytics</strong></h4>
+                                <h4 class="bottom15"><strong>Descriptive analytics</strong></h4>
                                 <p class="bottom15 text-justify">This subject describes about the raw data and make it
                                     something that is interpretable by humans. This subject also helps us to learn from
                                     past behaviours/event that had occurred and understand how they might influence
@@ -354,9 +385,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                   <h2 class="heading heading_space bottom25">Skill Development Ecosystem<span
-                                class="divider-left"></span>
-                        </h2>
+                    <h2 class="heading heading_space bottom25">Skill Development Ecosystem<span
+                            class="divider-left"></span>
+                    </h2>
                 </div>
             </div>
             <div class="row">
