--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         <!-- SLIDE  -->
         <li data-transition="fade">
           <!-- MAIN IMAGE -->
-          <img src="images/banner_1.jpg" alt="" data-bgposition="center center" data-bgfit="cover" data-bgparallax="10"
+          <img class="img-responsive" src="images/ai1.jpg" alt="" data-bgposition="center center" data-bgfit="cover" data-bgparallax="10"
             class="rev-slidebg">
           <!-- LAYER NR. 1 -->
           <div class="tp-caption tp-resizeme" data-x="['center','center','center','center']"
@@ -139,15 +139,15 @@
             data-transform_in="z:0;rX:0;rY:0;rZ:0;sX:0.9;sY:0.9;skX:0;skY:0;opacity:0;s:1500;e:Power3.easeInOut;"
             data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;"
             data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="800">
-            <h1>Where Skills Take Wings</h1>
+            <!-- <h1>Where Skills Take Wings</h1> -->
           </div>
           <div class="tp-caption tp-resizeme" data-x="['center','center','center','center']"
             data-hoffset="['0','0','0','0']" data-y="['380','340','300','350']" data-voffset="['0','0','0','0']"
             data-responsive_offset="on" data-visibility="['on','on','off','off']" data-transform_idle="o:1;"
             data-transform_in="opacity:0;s:1000;e:Power2.easeInOut;" data-transform_out="opacity:0;s:1000;s:1000;"
             data-start="1500">
-            <p style="font-style: italic;">What you get by achieving your goals is not as important as what you become
-              by achieving your goals</p>
+            <!-- <p style="font-style: italic;">What you get by achieving your goals is not as important as what you become
+              by achieving your goals</p> -->
           </div>
           <div class="tp-caption  tp-resizeme" data-x="['center','center','center','center']"
             data-hoffset="['0','0','0','0']" data-y="['450','390','350','250']" data-voffset="['0','0','0','0']"
@@ -159,7 +159,7 @@
         </li>
 
         <li data-transition="fade">
-          <img src="images/banner_2.png" alt="" data-bgposition="center center" data-bgfit="cover" data-bgparallax="10"
+          <img src="images/BI_banner.jpg" alt="" data-bgposition="center center" data-bgfit="cover" data-bgparallax="10"
             class="rev-slidebg">
           <div class="tp-caption tp-resizeme" data-x="['center','center','center','center']"
             data-hoffset="['0','0','0','0']" data-y="['326','270','270','150']" data-voffset="['0','0','0','0']"
@@ -167,15 +167,15 @@
             data-transform_in="z:0;rX:0;rY:0;rZ:0;sX:0.9;sY:0.9;skX:0;skY:0;opacity:0;s:1500;e:Power3.easeInOut;"
             data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;"
             data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="800">
-            <h1>Your Library Is Your Paradise</h1>
+            <!-- <h1>Your Library Is Your Paradise</h1> -->
           </div>
           <div class="tp-caption tp-resizeme" data-x="['center','center','center','center']"
             data-hoffset="['0','0','0','0']" data-y="['380','340','300','350']" data-voffset="['0','0','0','0']"
             data-responsive_offset="on" data-visibility="['on','on','off','off']" data-transform_idle="o:1;"
             data-transform_in="opacity:0;s:1000;e:Power2.easeInOut;" data-transform_out="opacity:0;s:1000;s:1000;"
             data-start="1500">
-            <p style="font-style: italic;">When the awareness of what is achievable brushes your life, your journey has
-              begun</p>
+            <!-- <p style="font-style: italic;">When the awareness of what is achievable brushes your life, your journey has
+              begun</p> -->
           </div>
           <div class="tp-caption  tp-resizeme" data-x="['center','center','center','center']"
             data-hoffset="['0','0','0','0']" data-y="['450','390','350','250']" data-voffset="['0','0','0','0']"
@@ -185,6 +185,33 @@
             data-mask_out="x:0;y:0;s:inherit;e:inherit;" data-start="2000">
           </div>
         </li>
+        <li data-transition="fade">
+            <img src="images/blockchain_banner.jpg" alt="" data-bgposition="center center" data-bgfit="cover" data-bgparallax="10"
+              class="rev-slidebg">
+            <div class="tp-caption tp-resizeme" data-x="['center','center','center','center']"
+              data-hoffset="['0','0','0','0']" data-y="['326','270','270','150']" data-voffset="['0','0','0','0']"
+              data-responsive_offset="on" data-visibility="['on','on','on','on']" data-transform_idle="o:1;"
+              data-transform_in="z:0;rX:0;rY:0;rZ:0;sX:0.9;sY:0.9;skX:0;skY:0;opacity:0;s:1500;e:Power3.easeInOut;"
+              data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;"
+              data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="800">
+              <!-- <h1>Your Library Is Your Paradise</h1> -->
+            </div>
+            <div class="tp-caption tp-resizeme" data-x="['center','center','center','center']"
+              data-hoffset="['0','0','0','0']" data-y="['380','340','300','350']" data-voffset="['0','0','0','0']"
+              data-responsive_offset="on" data-visibility="['on','on','off','off']" data-transform_idle="o:1;"
+              data-transform_in="opacity:0;s:1000;e:Power2.easeInOut;" data-transform_out="opacity:0;s:1000;s:1000;"
+              data-start="1500">
+              <!-- <p style="font-style: italic;">When the awareness of what is achievable brushes your life, your journey has
+                begun</p> -->
+            </div>
+            <div class="tp-caption  tp-resizeme" data-x="['center','center','center','center']"
+              data-hoffset="['0','0','0','0']" data-y="['450','390','350','250']" data-voffset="['0','0','0','0']"
+              data-responsive_offset="on" data-visibility="['on','on','on','on']" data-transform_idle="o:1;"
+              data-transform_in="y:[-200%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;s:1500;e:Power3.easeInOut;"
+              data-transform_out="auto:auto;s:1000;e:Power3.easeInOut;" data-mask_in="x:0px;y:0px;s:inherit;e:inherit;"
+              data-mask_out="x:0;y:0;s:inherit;e:inherit;" data-start="2000">
+            </div>
+          </li>
       </ul>
     </div><!-- END REVOLUTION SLIDER -->
   </section><br>
