--- a/iot.html
+++ b/iot.html
@@ -38,8 +38,8 @@
     <!--Header-->
     <header>
         <nav class="navbar navbar-default navbar-fixed white no-background bootsnav">
-             <!-- <div class="container"> -->
-        <div class="header">
+            <!-- <div class="container"> -->
+            <div class="header">
                 <div class="navbar-header">
                     <a class="navbar-brand" href="#">
                         <img src="images/IBM_ICE.jpg" alt="Logo" style="width: 200px !important;"
@@ -176,13 +176,13 @@
                 <div class="col-md-12">
                     <h2 class="heading bottom25">Internet Of Things<span class="divider-left"></span></h2>
                     <p class="half_space text-justify">
-                        This course covers in-depth concepts of IoT framework, IoT ecosystem, IoT solution architecture,
-                        networking protocols and application layer protocols. It also provides case studies which will
-                        help the student master the IoT technology. The Internet of Things (IoT) is expanding at a rapid
-                        rate, and it is becoming increasingly important for professionals to understand what it is, how
-                        it works, and how to harness its power to improve business. This introductory course will enable
-                        learners to leverage their business and/or technical knowledge across IoT-related functions in
-                        the workplace.
+                        IoT is short for Internet of Things. The Internet of Things refers to the fast-evolving network
+                        of physical objects with internet connectivity, and the communication between these objects and
+                        other Internet-enabled devices and systems. The Internet of Things is the extension of internet
+                        connectivity beyond computers, laptops, smart phones to a wide range of everyday objects that
+                        use embedded technology for communication to interact with the surrounding environment. Various
+                        organizations use IoT for efficient customer service and improved decision making to surge the
+                        value of their business.
                     </p>
                 </div>
             </div><br>
@@ -212,79 +212,85 @@
     </section>
 
     <section class="padding bottom25" style="padding-bottom: 0px;">
-        <div class="container"> 
-             <h2 class="heading bottom25">Market Trends And Predictions<span class="divider-left"></span></h2>
+        <div class="container">
+            <h2 class="heading bottom25">Market Trends And Projections<span class="divider-left"></span></h2>
             <div class="row">
                 <div class="col-md-5">
-                    <p class="half_space text-justify">Worldwide technology spending on the Internet of Things to reach
+                    <p class="half_space text-justify">IoT is relatively new entrant thus, trenda to pay higher
+                        salaries to professionals in their sectors.
+                        Worldwide technology spending on the Internet of Things to reach
                         $1.2T in 2022, attaining a CAGR of 13.6% over the 2017-2022 forecast period according to IDC.
-                    </p>
+                    </p><br>
                     <h4 class="siz">Salary Trends</h4>
-                    <ul class="ulpad">
-                            <li>Globally average salary is $92,283 per annum</li>
-                        <li>Median salary in India is ₹15.2lpa across all skill sets</li>
-                    </ul>
+                    <p class="text-justify">The hike in this sector for the current year is projected at around 9.8%<p>
+                            <ul class="ulpad">
+                                <li>Globally average salary is $92,283 per annum</li>
+                                <li>Median salary in India is INR 15.2lpa across all skill sets</li>
+                            </ul>
                 </div>
-                <div class="col-md-7">
+                <div class="col-md-">
                     <img class="img-responsive" src="images/IOT/market.png" alt="graph">
                 </div>
             </div>
         </div>
     </section>
 
+    <section id="ai">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <h3 class="heading bottom25">Skill Gap<span class="divider-left"></span></h3>
+                    <p class="text-justify">
+                        Research from Immersat research program reveals that 33 percent of organizations would benefit
+                        from additional skills, while 47 percent say they lack IoT skills altogether. According to Zebra
+                        Technologies’ inaugural Intelligent Enterprise Index, 62 percent of companies plan to deploy IoT
+                        initiatives company-wide in the future and 42 percent of enterprises are spending at least $3.1
+                        million annually on IoT. So, there’s a time crunch to ramp up training and education to catch up
+                        to the demand for the needed skills.
+                    </p>
+                </div>
+            </div><br>
+            <div class="row">
+                <div class="col-md-12">
+                    <h3 class="heading bottom25">Why IoT?<span class="divider-left"></span></h3>
+                    <p class="half_space text-justify">Internet of Things is a relatively new entrant thus, tends to pay
+                        high salaries to professionals in this sector. Public and Government sectors are offering
+                        attractive packages for Internet of Things professionals due to growing demands in market.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section><br>
+
     <section>
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
                     <img class="img-responsive" alt="skill" src="images/AIML/skills.jpg">
-                    <!-- <div class="col-sm-4">
-                        <img class="img-responsive" src="images/AIML/jobs.jpg">
-                    </div>
-                    <div class="col-sm-6">
-                        <div class="item">
-                            <h4 class="siz">Job Roles</h4>
-                            <ul class="ulpad">
-                                <li>Network engineer </li>
-                                <li>Backend developer</li>
-                                <li>Technical consultant</li>
-                                <li>Machine learning engineer</li>
-                            </ul>
-                        </div>
-                    </div> -->
                 </div>
                 <div class="col-md-6">
-                        <div class="item">
-                                <h4 class="siz">Job Roles</h4>
-                                <ul class="ulpad">
-                                    <li>Network engineer </li>
-                                    <li>Backend developer</li>
-                                    <li>Technical consultant</li>
-                                    <li>Machine learning engineer</li>
-                                </ul>
-                            </div>
-                            <div class="item">
-                                    <h4 class="siz">Skills Required</h4>
-                                    <ul class="ulpad">
-                                        <li>Programming</li>
-                                        <li>Networking</li>
-                                        <li>Analytics</li>
-                                        <li>Network security</li>
-                                    </ul>
-                                </div>
-                    <!-- <div class="col-sm-4">
-                        <img class="img-responsive" src="images/AIML/skills.jpg">
+                    <div class="item">
+                        <h4 class="siz">Job Roles</h4>
+                        <ul class="ulpad">
+                            <li>Network Engineer </li>
+                            <li>Backend Developer</li>
+                            <li>Technical Consultant</li>
+                            <li>Machine Learning Engineer</li>
+                            <li>Industrial Data Scientists</li>
+                            <li>Industrial Engineers</li>
+                            <li>Full Stack Developer</li>
+                        </ul>
+                    </div><br>
+                    <div class="item">
+                        <h4 class="siz">Skills Required</h4>
+                        <ul class="ulpad">
+                            <li>Programming</li>
+                            <li>Networking</li>
+                            <li>Analytics</li>
+                            <li>Network Security</li>
+                            <li>Communication Protocol</li>
+                        </ul>
                     </div>
-                    <div class="col-sm-6">
-                        <div class="item">
-                            <h4 class="siz">Skills Required</h4>
-                            <ul class="ulpad">
-                                <li>Programming</li>
-                                <li>Networking</li>
-                                <li>Analytics</li>
-                                <li>Network security</li>
-                            </ul>
-                        </div>
-                    </div> -->
                 </div>
             </div>
         </div>
@@ -300,6 +306,25 @@
             </div>
         </div>
     </section><br>
+
+    <section id="ai">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <h2 class="heading bottom25">Course Overview<span class="divider-left"></span></h2>
+                    <p class="half_space text-justify">
+                        This course covers in-depth concepts of IoT framework, IoT ecosystem, IoT solution architecture,
+                        networking protocols and application layer protocols. It also provides case studies which will
+                        help the student master the IoT technology. The Internet of Things (IoT) is expanding at a rapid
+                        rate, and it is becoming increasingly important for professionals to understand what it is, how
+                        it works, and how to harness its power to improve business. This introductory course will enable
+                        learners to leverage their business and/or technical knowledge across IoT-related functions in
+                        the workplace.
+                    </p>
+                </div>
+            </div><br>
+        </div>
+    </section>
 
     <!-- Courses -->
     <section class="">
@@ -318,10 +343,10 @@
                         <div class="item active">
                             <div class="col-md-4 col-sm-6 col-xs-12"><img src="images/IOT/IOTS1.png"
                                     class="img-responsive">
-                                <h4 class="bottom15"><strong>Introduction To IoT</strong></h4>
-                                <p class="bottom15 text-justify">This subject introduce the IoT and technologies behind
-                                    smart and intelligent devices and how to learn basics of IoT application development
-                                    using python application.
+                                <h4 class="bottom15"><strong>Introduction to IoT</strong></h4>
+                                <p class="bottom15 text-justify">This subject gives an overview on the IoT technologies behind
+                                    smart and intelligent devices. It also examines cyber security and
+                                    highlight how IoT can optimize processes and improve efficiencies in your business.
                                 </p>
                             </div>
                         </div>
@@ -329,7 +354,7 @@
                         <div class="item">
                             <div class="col-md-4 col-sm-6 col-xs-12"><img src="images/IOT/IOTS2.png"
                                     class="img-responsive">
-                                <h4 class="bottom15"><strong>IoT Enterprise Solution Architecture</strong></h4>
+                                <h4 class="bottom15"><strong>IoT enterprise solution architecture</strong></h4>
                                 <p class="bottom15 text-justify">This subject helps to gain knowledge on providing the
                                     business solution for wide-ranging industries. It also introduces to the
                                     applications of IoT, types of IoT systems and solutions across wide-ranging
@@ -341,7 +366,7 @@
                         <div class="item">
                             <div class="col-md-4 col-sm-6 col-xs-12"><img src="images/IOT/IOTS3.jpg"
                                     class="img-responsive">
-                                <h4 class="bottom15"><strong>Industry Application Development Using IoT</strong></h4>
+                                <h4 class="bottom15"><strong>Industry application development using IoT</strong></h4>
                                 <p class="bottom15 text-justify">This subject helps to gain knowledge on developing an
                                     IoT applications for various industries. It also provides an overview of IoT
                                     application case studies for various industries.
