--- a/BA.html
+++ b/BA.html
@@ -39,7 +39,7 @@
     <header>
         <nav class="navbar navbar-default navbar-fixed white no-background bootsnav">
             <!-- <div class="container"> -->
-        <div class="header">
+            <div class="header">
                 <div class="navbar-header">
                     <a class="navbar-brand" href="#">
                         <img src="images/IBM_ICE.jpg" alt="Logo" style="width: 200px !important;"
@@ -134,8 +134,8 @@
                 <!-- SLIDE  -->
                 <li data-transition="fade">
                     <!-- MAIN IMAGE -->
-                    <img src="images/BC_banner.jpg" alt="" data-bgposition="center center" data-bgfit="cover"
-                        data-bgparallax="10" class="rev-slidebg">
+                    <img src="images/BA/BA-sub_banner.jpg" alt="banner" data-bgposition="center center"
+                        data-bgfit="cover" data-bgparallax="10" class="rev-slidebg">
                     <!-- LAYER NR. 1 -->
                     <div class="tp-caption tp-resizeme" data-x="['center','center','center','center']"
                         data-hoffset="['0','0','0','0']" data-y="['326','270','270','150']"
@@ -175,7 +175,14 @@
             <div class="row">
                 <div class="col-md-12">
                     <h2 class="heading bottom25">Business Analytics<span class="divider-left"></span></h2>
-                    <p class="half_space text-justify">This specialization introduces big data analytics for all business professionals, including those with no prior analytics experience. Here the student will learn about the extensive use of statistical analysis, including explanatory and predictive modelling, and fact-based management to drive decision making. This course also focuses on developing new insights and understanding of business performance based on data and statistical methods. The quantifying mechanism which works with big data and performs various functions of business modelling and decision making for business prospects of various companies are also presented here.
+                    <p class="half_space text-justify">Business analytics (BA) is the techniques and methods used by an
+                        establishment to measure performance. Business analytics is the application of statistical
+                        methods to a product, process or project. Business analytics is used to evaluate an entire
+                        company. Business analytics identifies weaknesses in existing processes and highlight useful
+                        data that helps an organization to prepare for forthcoming challenges. The need for good
+                        business analytics has urged the conception of business analytics software and enterprise
+                        platforms that help in mining the data of the establishment to automate the processes and bring
+                        meaningful insights.
                     </p>
                 </div>
             </div><br>
@@ -206,77 +213,82 @@
 
     <section class="padding bottom25" style="padding-bottom: 0px;">
         <div class="container">
-                <h2 class="heading bottom25">Market Trends And Predictions<span class="divider-left"></span></h2>
-             <div class="row">
+            <h2 class="heading bottom25">Market Trends And Projections<span class="divider-left"></span></h2>
+            <div class="row">
                 <div class="col-md-5">
-                    <p class="half_space text-justify">The global Business Analytics software market size was 49700 million US$ and it is expected to reach 104000 million US$ by the end of 2025, with a CAGR of 9.7% during 2018-2025.
-                    </p>
+                    <p class="half_space text-justify">The statistic shows the constant annual growth rate of the
+                        fastest growing big data and analytics categories worldwide, between 2015 and 2020. In that
+                        period, the market for non-relational analytics data stores is projected to grow by 38.6
+                        percent.
+                    </p><br>
                     <h4 class="siz">Salary Trends</h4>
-                    <ul class="ulpad">
-                            <li>Globally average salary is $74k per annum</li>
-                            <li>Average salary in India is INR 70lpa across all skill sets</li>
-                    </ul>
-                </div>                    
-                <div class="col-md-7">
-                        <img class="img-responsive" src="images/BA/market-graph.jpg" alt="graph">
-                    </div>            
+                    <p class="text-justify">The hike in this sector for the current year is projected at around 9.8% <p>
+                            <ul class="ulpad">
+                                <li>Globally average salary is $74k per annum</li>
+                                <li>Average salary in India is INR 70lpa across all skill sets</li>
+                            </ul>
+                </div>
+                <div class="col-md-5">
+                    <img class="img-responsive" src="images/BA/market-graph.jpg" alt="graph">
+                </div>
             </div>
         </div>
     </section>
+
+    <section id="ai">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <h3 class="heading bottom25">Skill Gap<span class="divider-left"></span></h3>
+                    <p class="text-justify">
+                        International Data Corporation (IDC) predicts a need by 2018 for 181,000 people with deep
+                        analytical skills, and a requirement five times that number for jobs with the need for data
+                        management and interpretation skills.
+                    </p>
+                </div>
+            </div><br>
+            <div class="row">
+                <div class="col-md-12">
+                    <h3 class="heading bottom25">Why Business Analytics?<span class="divider-left"></span></h3>
+                    <p class="half_space text-justify">Business analytics is used in most of the world’s major companies
+                        where it can help to improve profitability of the business, increase market share and revenue
+                        and provide better return to a shareholder. There is a huge demand for business analyst from
+                        private and public sectors.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section><br>
 
     <section>
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
                     <img class="img-responsive" src="images/AIML/skills.jpg">
-                    <!-- <div class="col-sm-4">
-                        <img class="img-responsive" src="images/AIML/jobs.jpg">
-                    </div>
-                    <div class="col-sm-6">
-                        <div class="item">
-                            <h4 class="siz">Job Roles</h4>
-                            <ul class="ulpad">
-                                    <li>Business analyst </li>
-                                    <li>Business intelligence analyst</li>
-                                    <li>Technical business analyst</li>
-                                    <li>Lead business analyst</li>
-                                    <li>Product analyst</li>
-                            </ul>
-                        </div>
-                    </div> -->
                 </div>
                 <div class="col-md-6">
-                        <div class="item">
-                                <h4 class="siz">Job Roles</h4>
-                                <ul class="ulpad">
-                                        <li>Business analyst </li>
-                                        <li>Business intelligence analyst</li>
-                                        <li>Technical business analyst</li>
-                                        <li>Lead business analyst</li>
-                                        <li>Product analyst</li>
-                                </ul>
-                            </div><br>
-                            <div class="item">
-                                    <h4 class="siz">Skills Required</h4>
-                                    <ul class="ulpad">
-                                            <li>Programming</li>
-                                            <li>Analytics</li>
-                                            <li>Data visualization </li>
-                                    </ul>
-                                </div>
-                    <!-- <div class="col-sm-4">
-                        <img class="img-responsive" src="images/AIML/skills.jpg">
+                    <div class="item">
+                        <h4 class="siz">Job Roles</h4>
+                        <ul class="ulpad">
+                            <li>Business Analyst </li>
+                            <li>Business intelligence Analyst</li>
+                            <li>Technical business Analyst</li>
+                            <li>Lead business Analyst</li>
+                            <li>Product Analyst</li>
+                            <li>Data Analyst</li>
+                        </ul>
+                    </div><br>
+                    <div class="item">
+                        <h4 class="siz">Skills Required</h4>
+                        <ul class="ulpad">
+                            <li>Programming</li>
+                            <li>Analytics</li>
+                            <li>Data Visualization </li>
+                            <li>Data Review</li>
+                            <li>Statistical Analysis</li>
+                            <li>Design Skills</li>
+                        </ul>
                     </div>
-                    <div class="col-sm-6">
-                        <div class="item">
-                            <h4 class="siz">Skills Required</h4>
-                            <ul class="ulpad">
-                                    <li>Programming</li>
-                                    <li>Analytics</li>
-                                    <li>Data visualization </li>
-                            </ul>
-                        </div>
-                    </div> -->
                 </div>
             </div>
         </div>
@@ -284,23 +296,42 @@
 
     <section id="companies">
         <div class="container">
-                <h2 class="heading">Companies Hiring<span class="divider-left"></span></h2>
+            <h2 class="heading">Companies Hiring<span class="divider-left"></span></h2>
             <div class="row">
                 <div class="col-md-12">
-                <center><img class="img-responsive" src="images/BA/companies.PNG" alt="company"></center>
+                    <center><img class="img-responsive" src="images/BA/companies.PNG" alt="company"></center>
                 </div>
             </div>
         </div>
     </section><br>
+
+    <section id="ai">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <h2 class="heading bottom25">Course Overview<span class="divider-left"></span></h2>
+                    <p class="half_space text-justify">This specialization introduces big data analytics for all
+                        business professionals, including those with no prior analytics experience. Here the student
+                        will learn about the extensive use of statistical analysis, including explanatory and predictive
+                        modelling, and fact-based management to drive decision making. This course also focuses on
+                        developing new insights and understanding of business performance based on data and statistical
+                        methods. The quantifying mechanism which works with big data and performs various functions of
+                        business modelling and decision making for business prospects of various companies are also
+                        presented here.
+                    </p>
+                </div>
+            </div><br>
+        </div>
+    </section>
 
     <!-- Courses -->
     <section class="">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                     <h2 class="heading heading_space bottom25">Subjects<span class="divider-left"></span>
-                        </h2>
-                 </div>
+                    <h2 class="heading heading_space bottom25">Subjects<span class="divider-left"></span>
+                    </h2>
+                </div>
             </div>
             <div class="row">
                 <div class="col-md-12">
@@ -308,8 +339,11 @@
                         <div class="item active">
                             <div class="col-md-4 col-sm-6 col-xs-12"><img src="images/BA/BAS1.jpg"
                                     class="img-responsive">
-                                <h4 class="bottom15"><strong>Introduction To Business Analytics</strong></h4>
-                                <p class="bottom15 text-justify">This subject introduces the concept of business analysis and optimization. It gives an glimpse of the reference architecture in business analytics.
+                                <h4 class="bottom15"><strong>Introduction to business analytics</strong></h4>
+                                <p class="bottom15 text-justify">This subject introduces the concept of business
+                                    analysis and optimization. It gives a glimpse of the reference architecture in
+                                    business analytics. It provides an understanding of business intelligence 
+                                    concepts, design elements. 
                                 </p>
                             </div>
                         </div>
@@ -317,8 +351,10 @@
                         <div class="item">
                             <div class="col-md-4 col-sm-6 col-xs-12"><img src="images/BA/BAS2.jpg"
                                     class="img-responsive">
-                                <h4 class="bottom15"><strong>Predictive And Advanced Analytics</strong></h4>
-                                <p class="bottom15 text-justify">This subject provides an overview of data mining concepts, KDD models, data partitioning, model evaluation, deployment techniques and industry-specific knowledge in data mining and data warehouse.
+                                <h4 class="bottom15"><strong>Predictive and advanced analytics</strong></h4>
+                                <p class="bottom15 text-justify">This subject provides an overview of data mining
+                                    concepts, KDD models, data partitioning, model evaluation, deployment techniques and
+                                    industry-specific knowledge in data mining and data warehouse.
                                 </p>
                             </div>
                         </div>
@@ -326,8 +362,10 @@
                         <div class="item">
                             <div class="col-md-4 col-sm-6 col-xs-12"><img src="images/BA/BAS3.jpg"
                                     class="img-responsive">
-                                <h4 class="bottom15"><strong>Social And Web Analytics</strong></h4>
-                                <p class="bottom15 text-justify">This subject provides an overview of social media analytics and web analytics. It also focuses on the impact of social media on business and how to leverage the power of social media for better services.
+                                <h4 class="bottom15"><strong>Social and web analytics</strong></h4>
+                                <p class="bottom15 text-justify">This subject provides an overview of social media
+                                    analytics and web analytics. It also focuses on the impact of social media on
+                                    business and how to leverage the power of social media for better services.
                                 </p>
                             </div>
                         </div>
@@ -343,9 +381,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                      <h2 class="heading heading_space bottom25">Skill Development Ecosystem<span
-                                class="divider-left"></span>
-                        </h2>
+                    <h2 class="heading heading_space bottom25">Skill Development Ecosystem<span
+                            class="divider-left"></span>
+                    </h2>
                 </div>
             </div>
             <div class="row">
@@ -434,31 +472,31 @@
         //     gridheight: [480, 600, 500, 390],
         // });
 
-         // navbar icon
+        // navbar icon
 
-    function openNav() {
-      document.getElementById("mySidenav").style.display = "block";
-    }
-
-    function closeNav() {
-      document.getElementById("mySidenav").style.display = "none";
-    }
-
-    //  dropdown
-    var dropdown = document.getElementsByClassName("dropdown-btn");
-    var i;
-
-    for (i = 0; i < dropdown.length; i++) {
-      dropdown[i].addEventListener("click", function () {
-        this.classList.toggle("active");
-        var dropdownContent = this.nextElementSibling;
-        if (dropdownContent.style.display === "block") {
-          dropdownContent.style.display = "none";
-        } else {
-          dropdownContent.style.display = "block";
+        function openNav() {
+            document.getElementById("mySidenav").style.display = "block";
         }
-      });
-    }
+
+        function closeNav() {
+            document.getElementById("mySidenav").style.display = "none";
+        }
+
+        //  dropdown
+        var dropdown = document.getElementsByClassName("dropdown-btn");
+        var i;
+
+        for (i = 0; i < dropdown.length; i++) {
+            dropdown[i].addEventListener("click", function () {
+                this.classList.toggle("active");
+                var dropdownContent = this.nextElementSibling;
+                if (dropdownContent.style.display === "block") {
+                    dropdownContent.style.display = "none";
+                } else {
+                    dropdownContent.style.display = "block";
+                }
+            });
+        }
 
         // video
 
